--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "chalk": "^4.1.2",
+    "dotenv": "^16.4.7",
     "inquirer": "^12.5.2",
     "mysql2": "^3.14.0"
   }
